--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=FT62X6
+name=TAMC_FT62X6
 version=1.0.0
 author=TAMC
 maintainer=TAMC <tamctec@gmail.com>
@@ -6,5 +6,4 @@ sentence=Arduino library for FT62X6
 paragraph=Arduino library for FT62X6
 category=Display
 url=https://gitlab.com/tamctec/ft62x6-arduino
-architectures=*
-depends=
+architectures=esp32
