--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=TAMC <tamctec@gmail.com>
 sentence=Arduino library for FT62X6
 paragraph=Arduino library for FT62X6
 category=Display
-url=https://gitlab.com/tamctec/ft62x6-arduino
+url=https://github.com/tamctec/ft62x6-arduino
 architectures=esp32
